# image_converter

./: Cargo.toml  Makefile  README.md
src/: config.rs  lib.rs  main.rs  processor.rs
tests/: cli.rs  consumable.rs
