[package]
name = "image-converter"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = "deny"
pedantic = "warn"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", features = ["webp"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
